Bugfix: Kanjidic: scrollbar would cover kanji search history Feature: Kanjidic: history scrollbar is very thin

--- a/data/css/styles.css
+++ b/data/css/styles.css
@@ -12,3 +12,8 @@
 paned separator {
    background: none;
 }
+
+.minislider slider{
+   min-width:0px;
+   border-width: 1px;
+}
